Aastha ke sath Flickr clone almost complete kar liya

--- a/index.html
+++ b/index.html
@@ -1,18 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Flickr Home</title>
+    <script src="https://kit.fontawesome.com/6fdb1c49f3.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-    <nav class="navBar">
-        <img src="Media/Flickr-logo.png" alt="Flickr Logo">
-        <input type="search" name="" id="">
-        <a href="#">Log In</a>
-        <a href="#">Sign Up</a>
-    </nav>
-    
+    <div class="primaryContainer">
+        <nav class="navBar">
+            <div class="logo">
+                <img src="Media/Flickr-logo.png" alt="Flickr Logo">
+            </div>
+            <div class="menu">
+                <input type="search" name="" id="" class="flex-items search-bar" placeholder="Photos, people or groups">
+                <a href="#" class="flex-items menu1">Log In</a>
+                <a href="#" class="flex-items menu2">Sign Up</a>
+            </div>
+        </nav>
+
+        <div class="hero">
+            <div class="hero-elements">
+                <h2 class="hero-content">Find your inspiration.</h2>
+                <h3 class="hero-content">Join the Flickr community, home to tens of billions of photos and 2 million
+                    groups.</h3>
+                <div class="anchor">
+                    <a href="#" class="hero-content">Start for free</a>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
+    <footer>
+        <div class="footerBlack">
+            <ul class="footerMenu">
+                <li><a href="">About</a></li>
+                <li><a href="">Jobs</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Developer</a></li>
+                <li><a href="">Guideline</a></li>
+                <li><a href="">Help</a></li>
+                <li><a href="">Help Forum</a></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Terms</a></li>
+                <li><a href="">Cookies</a></li>
+                <li><a href="">English</a></li>
+                <li><a href="">SmugMug+Flickr</a></li>
+                <i class="fa fa-facebook-f" style="font-size:20px; color: white; margin-right: 50px;"></i>
+                <i class="fa fa-twitter" style="font-size:20px; color: white; margin-right: 50px;" aria-hidden="true"></i>
+                <i class="fa fa-instagram" style="font-size:20px; color: white; margin-right: 50px;" aria-hidden="true"></i>
+            </ul>
+        </div>
+    </footer>
+
 </body>
+
+
 </html>
